# mpv-livetweet

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  get-body.vbs  get-keys.lua  install.sh  mpv-livetweet.lua  osx.patch  print-to-stdout.applescript
.github/workflows/: release.yml
get_keys/: Cargo.toml
get_keys/src/: main.rs
src/: get-keys.moon  mpv-livetweet.moon
twitter/: Cargo.toml
twitter/src/: main.rs
